# android-luajit-launcher

./: .codacy.yml  .detekt.yml  .editorconfig  .gitignore  .gitmodules  .remarkrc  .travis.yml  AndroidManifest.xml  CMakeLists.txt  LICENSE  Makefile  README.md  ant.properties  build.gradle  build.xml  detekt.yml  gradle.properties  gradlew  import-summary.txt  koreader-luajit-makefile-tweaks.patch  main.lua  mk-luajit.sh  settings.gradle
.github/workflows/: build.yml
app/: AndroidManifest.xml  build.gradle  lint.xml  proguard-rules.pro
app/manifest/: base.xml  full.xml  jailed.xml  landscape.xml  (+2 more)
assets/: android.lua  dl.lua  dt_needed.lua  elf.lua  elf_h.lua  install.lua  launcher.lua  loader.lua  main.lua  test.lua
eink-test/: AndroidManifest.xml  Makefile  build.gradle  build.xml  copyEPDControllers.sh
ffi-cdecl/: elf_decl.c
jni/: 7zMain.patch  Android.mk  Application.mk  CMakeLists.txt  android-main.c  dummy.c  jni_helper.c  jni_helper.cpp  jni_helper.h  main.c  unarchive.cpp
jni/7z/: unarchive.c
jni/android_native_app_glue/: Android.mk  android_native_app_glue.c  android_native_app_glue.h
jni/foo/: Android.mk
jni/ioctl/: Android.mk  ioctl.c  ioctl.cpp
jni/luajit/: Android.mk  koreader-luajit-makefile-tweaks.patch  koreader-luajit-mcode-debug.patch  koreader-luajit-mcode-reserve-hack.patch  mk-luajit.sh
jni/lzma/: 7zMain.patch  Android.mk  README.md  un7z.cpp
jni/lzma/un7zip/: 7zAssetFile.h  7zExtractor.cpp
launcher/: AndroidManifest.xml  build.gradle
service/: build.gradle
service-test/: build.gradle
utils/: print_dt_needed.lua
(+286 files in other folders)
